# kookie-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/crypto/: mod.rs
src/session/: mod.rs
src/utils/: generators.rs  input.rs
src/vault/: mod.rs  types.rs
