[package]
name = "kookie"
version = "0.1.1"
edition = "2021"
authors = ["Developer"]
description = "A secure, local-first, encrypted secret manager for developers"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sa001gar/kookie-cli"
homepage = "https://github.com/sa001gar/kookie-cli"
documentation = "https://github.com/sa001gar/kookie-cli#readme"
keywords = ["secrets", "password-manager", "encryption", "cli", "security"]
categories = ["command-line-utilities", "cryptography"]
exclude = ["assets/*", ".github/*", "install.ps1", "install.sh"]

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rpassword = "7"
dirs = "5"
colored = "2"
arboard = "3"
thiserror = "1"

# For session management
tempfile = "3"

# Windows registry (for PATH modification)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
